@@ -1,3 +1,7 @@
+2012-01-30  ShaRose  <ShawnAndrewRose@Gmail.Com>
+
+	* MultiMCLauncher.java: 
+
 2012-01-30  Shawn  <${AuthorEmail}>
 
 	* MultiMC.csproj, Problems.cs, RegexProblem.cs,
